ext-alb/external-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-manager.io/issuer: apic-poc-ingress-issuer
    haproxy.router.openshift.io/balance: roundrobin
  name: apic-poc-gw-gateway-external
  namespace: cp4i
  labels:
    app.kubernetes.io/instance: apic-poc-gw
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: apic-poc
spec:
  host: apic-poc-gw-gateway-cp4i.external.apps.bjs-cp4i.ocp.bjswholesale.info
  to:
    kind: Service
    name: apic-poc-gw-datapower
    weight: 100
  port:
    targetPort: 9443
  tls:
    termination: passthrough
  wildcardPolicy: None
