ext-alb/pathbased.yaml
apiVersion: route.openshift.io/v1
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gwpathrouter-default
  namespace: cp4i
  annotations:
    haproxy.router.openshift.io/timeout: 240s
spec:
  host: openshift.poc-internal.bjs.com
  path: /bj-poc-provider/sandbox/testv5-api/
  to:
    kind: Service
    name: apic-gw-v5-datapower
    weight: 100
  port:
    targetPort: '9443'
  tls:
    termination: reencrypt
    certificate: |-   
      -----BEGIN CERTIFICATE-----
      MIIEljCCA36gAwIBAgIUeg0rKpBGyjh8kbSlL6uy+wnO6DAwDQYJKoZIhvcNAQEL
[...]
      m6l9a1qIGwaS6wZKVzWmt2mbHyLqPDx/ffo=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvAIBADANBgkqhkiG9w0BAQEFAASCBKYwggSiAgEAAoIBAQDXFCV5QnOM7Utc
[...]
      YQc0DlWwFK78GQnC5XBCUQ==
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEljCCA36gAwIBAgIUeg0rKpBGyjh8kbSlL6uy+wnO6DAwDQYJKoZIhvcNAQEL
[...]
      m6l9a1qIGwaS6wZKVzWmt2mbHyLqPDx/ffo=
      -----END CERTIFICATE-----
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEljCCA36gAwIBAgIUeg0rKpBGyjh8kbSlL6uy+wnO6DAwDQYJKoZIhvcNAQEL
[...]
      m6l9a1qIGwaS6wZKVzWmt2mbHyLqPDx/ffo=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
